src/test/resources/testinput/cocos/invalid/invalidMethodStartsWithLowerCaseLetter.ocl
/* (c) https://github.com/MontiCore/monticore */

ocl invalidMethodStartsWithLowerCaseLetter {
  context boolean Foo()
}